--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,25 +15,22 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  background: rgb(30, 100, 151);
-  background: -moz-linear-gradient(
+  background: linear-gradient(
     0deg,
-    rgba(30, 100, 151, 1) 0%,
-    rgba(17, 56, 85, 1) 60%,
-    rgba(0, 0, 0, 1) 100%
+    rgba(163, 222, 251, 1) 0%,
+    rgba(207, 235, 249, 1) 100%
   );
-  background: -webkit-linear-gradient(
-    0deg,
-    rgba(30, 100, 151, 1) 0%,
-    rgba(17, 56, 85, 1) 60%,
-    rgba(0, 0, 0, 1) 100%
-  );
+  font-family: "Open Sans", sans-serif;
+}
+
+body:has(article div input[type="checkbox"]:checked) {
   background: linear-gradient(
     0deg,
     rgba(30, 100, 151, 1) 0%,
     rgba(17, 56, 85, 1) 60%,
     rgba(0, 0, 0, 1) 100%
   );
+  /* background-color: red; */
 }
 
 body > article {
@@ -72,6 +69,15 @@ body > article div {
   justify-content: flex-end;
 }
 
+body > article div label {
+  margin-right: 15px;
+  margin-top: 15px;
+}
+
+body > article div label:hover {
+  cursor: pointer;
+}
+
 body > article div input[type="checkbox"] {
   appearance: none;
   position: absolute;
@@ -89,6 +95,7 @@ body > article div ul {
   background-color: white;
   transition: background-color 250ms;
   padding: 0;
+  margin: 0;
 }
 
 body > article div ul li {
@@ -109,25 +116,11 @@ body > article div input[type="checkbox"]:checked ~ ul {
 }
 
 body > article div input[type="checkbox"]:checked ~ ul li {
-  background-color: #485367;
   box-shadow: inset 0px 0px 0px 0.75em white;
   transform: translate(33px, 3px);
 }
 
 body section:nth-of-type(2) div:last-of-type {
-  background: rgb(92, 157, 13);
-  background: -moz-linear-gradient(
-    0deg,
-    rgba(92, 157, 13, 1) 0%,
-    rgba(132, 186, 34, 1) 67%,
-    rgba(175, 217, 57, 1) 100%
-  );
-  background: -webkit-linear-gradient(
-    0deg,
-    rgba(92, 157, 13, 1) 0%,
-    rgba(132, 186, 34, 1) 67%,
-    rgba(175, 217, 57, 1) 100%
-  );
   background: linear-gradient(
     0deg,
     rgba(92, 157, 13, 1) 0%,
@@ -139,6 +132,7 @@ body section:nth-of-type(2) div:last-of-type {
   border-radius: 150% 150% 50% 60% / 150% 150% 0% 0%;
   position: absolute;
   bottom: 0;
+  transition: .3s ease-in-out;
 }
 
 body section:nth-of-type(2) input[type="checkbox"],
@@ -152,13 +146,25 @@ body section:nth-of-type(2) label {
 body section:nth-of-type(2) label {
   padding: 20px 40px 15px 40px;
   background-color: transparent;
-  border: 2px solid red;
   border-radius: 2px;
-  color: red;
   font-size: 25px;
   font-family: "helsky", sans-serif;
   letter-spacing: 2px;
   font-weight: 200;
+  border: 2px solid rgba(255, 0, 0, 0.308);
+  color: rgba(255, 0, 0, 0.308);
+  pointer-events: none;
+  transition: .3s ease-in-out;
+}
+
+body:has(input[name="dayNightMode"]:checked) section:nth-of-type(2) div:last-of-type label {
+  border-color: red;
+  color: red;
+  pointer-events: all;
+}
+
+body:has(input[name="dayNightMode"]:checked) section:nth-of-type(2) div:last-of-type label:hover {
+  color: white;
 }
 
 body section:nth-of-type(2) label:hover {
@@ -201,17 +207,6 @@ body section:nth-of-type(2) {
 body section:nth-of-type(2) div:first-of-type {
   height: 100px;
   width: 25px;
-  background: rgb(221, 0, 0);
-  background: -moz-linear-gradient(
-    0deg,
-    rgba(221, 0, 0, 1) 0%,
-    rgba(255, 0, 0, 1) 100%
-  );
-  background: -webkit-linear-gradient(
-    0deg,
-    rgba(221, 0, 0, 1) 0%,
-    rgba(255, 0, 0, 1) 100%
-  );
   background: linear-gradient(
     0deg,
     rgba(221, 0, 0, 1) 0%,
@@ -220,8 +215,9 @@ body section:nth-of-type(2) div:first-of-type {
   position: absolute;
   bottom: 22%;
   left: 50%;
-  transform: translate(-50%);
+  transform: scale(1) translate(-50%);
   z-index: 4;
+  transition: .3s ease-in-out;
 }
 
 body section:nth-of-type(2) div:first-of-type:before {
@@ -265,33 +261,36 @@ body section:nth-of-type(2) div:first-of-type:after {
   left: calc(50% - 5px);
 } */
 
-body:has(section:nth-of-type(2) input[type="checkbox"]:checked)
+/* body:has(section:nth-of-type(1) ul li input[type="radio"]:checked) {
+  display: none;
+} */
+body:has(section:nth-of-type(1) ul li input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked)
   section:nth-of-type(2)
   article {
-  height: 10px;
-  width: 10px;
+  height: 35px;
+  width: 35px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: green;
+  background-image: url('../img/firework.svg');
   border-radius: 50%;
-  animation: launchFirework 1s, hideLaunch 0.7s;
+  animation: launchFirework 1s;
   animation-duration: 1s;
   animation-fill-mode: forwards;
   transition-timing-function: ease-in-out;
   animation-delay: 0s, 0.7s;
   position: absolute;
   top: 0;
-  left: calc(50% - 5px);
+  left: -5px;
 }
 
 @keyframes launchFirework {
   from {
-    transform: translate(0px, 0px);
+    transform: translate(0px, 0px) rotate(-45deg);
   }
 
   to {
-    transform: translate(0px, -300px);
+    transform: translate(0px, -300px) rotate(-45deg);
   }
 }
 
@@ -318,33 +317,55 @@ body section:nth-of-type(2) article ul {
   padding: 0;
 }
 
-body section:nth-of-type(2) article ul li {
+section:nth-of-type(2) article ul li {
+  list-style-type: none;
   position: absolute;
-  width: 5px;
-  height: 5px;
+  width: 15px;
+  height: 15px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: gold;
-  list-style-type: none;
   transition: opacity 0.3s ease-out;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
   z-index: -1;
+  list-style-type: none;
+
+
+}
+
+/* body:has(section:nth-of-type(1) ul li:nth-of-type(1) input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked) section:nth-of-type(2) article ul li {
+  background-color: gold;
   animation-name: explode;
   animation-delay: 1s;
-  animation-duration: 0.6s;
+  animation-duration: 1s;
   animation-fill-mode: forwards;
   transition-timing-function: ease-in-out;
+} */
+
+body:has(section:nth-of-type(1) ul li:nth-of-type(2) input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked) section:nth-of-type(2) article ul li {
+  background-color: purple;
+  list-style-type: none;
+  z-index: -1;  
+  animation-name: explode;
+  animation-delay: 1s;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  transition-timing-function: ease-in-out;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
 }
+
 
 @keyframes explode {
   from {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 1;
+    top: 25%;
+    left: 75%;
+    transform: translate(-25%, -75%);
+    opacity: 0;
   }
 
-  50% {
+  90% {
     opacity: 1;
   }
 
@@ -400,24 +421,47 @@ body section:nth-of-type(2) article ul li:nth-child(8) {
 /** Sidebar **/
 
 body section:nth-of-type(1) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   height: 100%;
-  width: 250px;
+  width: 175px;
   z-index: 1;
   top: 0;
 }
 
 body section:nth-of-type(1) ul {
-  height: 100%;
-  padding-left: 40px;
-  margin: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
+  padding: 40px 0;
+  margin: 0;
+  background: repeating-linear-gradient(
+    90deg,
+    #bc9360,
+    #bc9360 30px,
+    #a38054 30px,
+    #a38054 32px
+  );
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border: 10px solid #a37f54;
+  border-left: none;
 }
 
 body section:nth-of-type(1) ul li {
   list-style-type: none;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
 }
 
 body section:nth-of-type(1) ul li:not(:first-of-type) {
@@ -428,11 +472,427 @@ body section:nth-of-type(1) ul li input[type="radio"] {
   appearance: none;
   width: 100px;
   height: 100px;
-  border: 7px solid red;
   border-radius: 50%;
   aspect-ratio: 1;
+  position: relative;
+  margin: 0;
+}
+
+body section:nth-of-type(1) ul li input[type="radio"]:hover {
+  cursor: pointer;
 }
 
 body section:nth-of-type(1) ul li input[type="radio"]:checked {
+  box-shadow:  rgba(255, 166, 0, 1) 0px 7px 29px 0px;
+  border: 3px solid rgb(255, 166, 0);
+}
+
+body section:nth-of-type(1) ul li:nth-child(1) input[type="radio"] {
+  background: url('../img/firework-ball.png');
+  background-size: 65%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+body section:nth-of-type(1) ul li input:before {
+  content: var(--modeContent);
+  top: var(--explode-top, 150px);
+  font-size: 16px;
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+body section:nth-of-type(1) ul li:first-of-type input:before {
+  --modeContent: "";
+  height: 15px;
+  width: 15px;
+  /* background-color: gold; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+
+body section:nth-of-type(1) ul li:nth-of-type(2) input:before {
+  --modeContent: "2";
+}
+
+body section:nth-of-type(1) ul li:nth-of-type(3) input:before {
+  --modeContent: "3";
+}
+
+/** Moon & Sun **/
+
+section:nth-of-type(3){
+  position: absolute;
+  top: 100px;
+  right: 10%;
+  width: 125px;
+  height: 125px;
+  border-radius: 50%;
   background-color: orange;
+  box-shadow: 0 0 45px 5px yellow,0 0 65px 10px yellow inset;
+}
+
+body:has(article div input[type="checkbox"]:checked) section:nth-of-type(3) {
+  box-shadow: none;
+  background: linear-gradient(50deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, rgba(205,205,205,1) 100%);
+  box-shadow: 0 0 10px 2px #dcdcdc;
+  pointer-events: none;
+}
+
+body:has(article div input[type="checkbox"]:checked) section:nth-of-type(3) div:before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 30px;
+  left: 25px;
+  background: linear-gradient(50deg, rgba(230,230,230,1) 0%, rgba(230,230,230,1) 30%, rgba(205,205,205,1) 100%);
+  border-radius: 50%;
+}
+
+body:has(article div input[type="checkbox"]:checked) section:nth-of-type(3) div:after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 60px;
+  left: 20px;
+  background-color: #E6E6E6;
+  border-radius: 50%;
+}
+
+/* Zoom buttons */
+
+section:nth-of-type(4) {
+  height: max-content;
+  width: max-content;
+  position: absolute;
+  bottom: 100px;
+  right: 200px;
+}
+
+section:nth-of-type(4) ul {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding: 0;
+}
+
+section:nth-of-type(4) ul li {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+
+section:nth-of-type(4) ul li input[type="radio"] {
+  appearance: none;
+  border: 4px solid red;
+  aspect-ratio: 1;
+  position: relative;
+  margin: 0;
+  width: 75px;
+  height: 75px;
+  border-radius: 10px;
+}
+
+section:nth-of-type(4) ul li input[type="radio"]:hover {
+  cursor: pointer;
+}
+
+section:nth-of-type(4) ul li input[type="radio"]:checked {
+  background-color: red;
+}
+
+section:nth-of-type(4) ul li input[type="radio"]:before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(10deg);
+  content: var(--zoomContent);
+  font-size: 22px;
+  font-weight: bold;
+  color: white;
+}
+
+section:nth-of-type(4) ul li:first-of-type input[type="radio"]:before {
+  --zoomContent: "1x";
+}
+
+section:nth-of-type(4) ul li:nth-of-type(2) input[type="radio"]:before {
+  --zoomContent: "2x";
+}
+
+section:nth-of-type(4) ul li:last-of-type input[type="radio"]:before {
+  --zoomContent: "3x";
+}
+
+/* Zoom in 2x */
+
+body:has(section:nth-of-type(4) ul li:nth-of-type(2) input[type="radio"]:checked) section:nth-of-type(2) div:last-of-type {
+  height: 18vh;
+}
+
+body:has(section:nth-of-type(4) ul li:nth-of-type(2) input[type="radio"]:checked) section:nth-of-type(2) div:first-of-type {
+  transform: scale(0.8) translate(-50%);
+  bottom: 14%;
+}
+
+/* Zoom in 3x */
+
+body:has(section:nth-of-type(4) ul li:nth-of-type(3) input[type="radio"]:checked) section:nth-of-type(2) div:last-of-type {
+  height: 12vh;
+}
+
+body:has(section:nth-of-type(4) ul li:nth-of-type(3) input[type="radio"]:checked) section:nth-of-type(2) div:first-of-type {
+  transform: scale(0.6) translate(-50%);
+  bottom: 9%;
+}
+
+
+/* Power levels */
+
+section:nth-of-type(5) {
+  height: max-content;
+  width: max-content;
+  position: absolute;
+  bottom: 200px;
+  right: 200px;
+}
+
+section:nth-of-type(5) ul {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding: 0;
+}
+
+section:nth-of-type(5) ul li {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+
+section:nth-of-type(5) ul li input[type="radio"] {
+  appearance: none;
+  border: 4px solid red;
+  aspect-ratio: 1;
+  position: relative;
+  margin: 0;
+  width: 75px;
+  height: 75x;
+  border-radius: 10px;
+}
+
+section:nth-of-type(5) ul li input[type="radio"]:hover {
+  cursor: pointer;
+}
+
+section:nth-of-type(5) ul li input[type="radio"]:checked {
+  background-color: red;
+}
+
+section:nth-of-type(5) ul li input[type="radio"]:hover:before {
+  animation: moveIcon 0.2s infinite alternate;
+}
+
+section:nth-of-type(5) ul li input[type="radio"]:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40px;
+  height: 40px;
+  background-size: 100%;
+}
+
+section:nth-of-type(5) ul li:first-of-type input[type="radio"]:before {
+  background-image: url('../img/rocket-power1.svg');
+}
+
+section:nth-of-type(5) ul li:nth-of-type(2) input[type="radio"]:before {
+  background-image: url('../img/rocket-power2.svg');
+}
+
+section:nth-of-type(5) ul li:last-of-type input[type="radio"]:before {
+  background-image: url('../img/rocket-power3.svg');
+}
+
+@keyframes moveIcon{
+  from {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  to {
+    top: 45%;
+    left: 55%; 
+  }
+}
+
+/* Vuurwerk - Power 1 */
+body:has(section:nth-of-type(5) ul li:first-of-type input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked) section:nth-of-type(2) article {
+  animation-name: launchFirework, hideLaunch;
+  animation-delay: 0s, 1.7s;
+  animation-duration: 1.5s, 0.7s;
+  animation-fill-mode: forwards;
+  transition-timing-function: ease-out;
+  transform: translate(0px, 0px) rotate(-45deg);
+}
+
+body:has(section:nth-of-type(5) ul li:first-of-type input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked) section:nth-of-type(2) article ul li{
+  background-color: gold;
+  opacity: 0;
+  animation-name: explode;
+  animation-delay: 1.5s;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  transition-timing-function: ease-in-out;
+}
+
+/* Vuurwerk - Power 2 */
+
+body:has(section:nth-of-type(5) ul li:nth-of-type(2) input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked) section:nth-of-type(2) article {
+  animation-name: firePower2, hideLaunch;
+  animation-delay: 0s, 1.7s;
+  animation-duration: 1.5s, 0.7s;
+  animation-fill-mode: forwards;
+  transition-timing-function: ease-out;
+  transform: translate(0px, 0px) rotate(-45deg);
+}
+
+/* Vuurwerk - Power 3 */
+
+body:has(section:nth-of-type(5) ul li:nth-of-type(3) input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked) section:nth-of-type(2) article {
+  animation-name: firePower3, hideLaunch;
+  animation-delay: 0s, 1.7s;
+  animation-duration: 1.5s, 0.7s;
+  animation-fill-mode: forwards;
+  transition-timing-function: ease-out;
+}
+
+/* Kleurtjes instellen */
+
+body:has(section:nth-of-type(1) ul li:nth-of-type(1) input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked) section:nth-of-type(2) article ul li{
+  background-color: gold;
+  opacity: 0;
+  animation-name: explode;
+  animation-delay: 1.5s;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  transition-timing-function: ease-in-out;
+}
+
+body:has(section:nth-of-type(1) ul li:nth-of-type(2) input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked) section:nth-of-type(2) article ul li{
+  background-color: purple;
+  opacity: 0;
+  animation-name: explode;
+  animation-delay: 1.5s;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  transition-timing-function: ease-in-out;
+}
+
+body:has(section:nth-of-type(1) ul li:nth-of-type(3) input[type="radio"]:checked):has(section:nth-of-type(2) input[type="checkbox"]:checked) section:nth-of-type(2) article ul li{
+  background-color: blue;
+  opacity: 0;
+  animation-name: explode;
+  animation-delay: 1.5s;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  transition-timing-function: ease-in-out;
+}
+
+
+
+/* Power animaties */
+
+@keyframes firePower2 {
+  from {
+    transform: translate(0px, 0px) rotate(-45deg);
+    
+  }
+
+  to {
+    transform: translate(0px, -600px) rotate(-45deg);
+  }
+}
+
+@keyframes firePower3 {
+  from {
+    transform: translate(0px, 0px) rotate(-45deg);
+  }
+
+  to {
+    transform: translate(0px, -800px) rotate(-45deg);
+  }
+}
+
+
+/* Alert pop-up */
+
+section:nth-of-type(6) {
+  width: 300px;
+  height: 200px;
+  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 3px solid red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  text-align: center;
+  z-index: 5;
+}
+
+body :not(section:nth-of-type(6)) * {
+  filter: blur(4px);
+  pointer-events: none;
+}
+
+body:has(section:nth-of-type(6) input[type="checkbox"]:checked) section:nth-of-type(6) {
+  display: none;
+}
+
+body:has(section:nth-of-type(6) input[type="checkbox"]:checked) :not(section:nth-of-type(6)) {
+  filter: none;
+}
+
+body:has(section:nth-of-type(6) input[type="checkbox"]:checked) :not(section:nth-of-type(2) div label) {
+  pointer-events: all;
+}
+
+section:nth-of-type(6) input[type="checkbox"] {
+  appearance: none;
+  position: absolute;
+  height: 0;
+  width: 0;
+  cursor: pointer;
+}
+
+section:nth-of-type(6) label {
+  color: red;
+  border: 2px solid red;
+  padding: 10px 20px;
+  transition: 0.3s ease-in-out;
+}
+
+section:nth-of-type(6) label:hover {
+  background-color: red;
+  color: white;
+  cursor: pointer;
 }
